css/main.css
/* ==========================================================================
   Author's custom styles
   ========================================================================== */

body, html
{
    background-color: #fff8f4;
}
.cursive
{

font-family: 'Yesteryear', cursive;
color:#ff6600;
}




.username
{
padding: 15px;
}
.username:hover
{
    text-decoration: none;
}


.username-text
{
    font-weight: bold;
  margin-left:10px;
  font-size: 18px;
line-height: 20px;

  margin-top: 15px;
  margin-bottom: 15px;
}

.size32 {
    width: 32px;
    height: 32px;
    border-radius: 4px;
}


.btn-tweet
{
    color: #fff;
    background-color: #55ACEE;
    min-width: 50px;
}

.pad-left
{
    margin-left: 5px;
    margin-top: 2.5px;
}

.header
{
    margin-top:40px;
    font-size:5em;
}

.too-long
{
    color: #FF4136;
    background-color: #E2E2E2;
}

.svg-media
{
    max-width: 500px;
    max-height: 500px;
}

sourcetext
{
    display: block;
    unicode-bidi: embed;
    font-family: monospace;
    white-space: pre;
    overflow: scroll;
}

.form-group
{
  padding-bottom:10px;
}

.parsererror h3
{
  font-size: 100%;
  margin-top: 0px;
  margin-bottom: 0px;

  font-weight: normal;
  line-height: 1;
  color: #ffffff;
}

table.admintable>thead>tr>th, .table.admintable>thead>tr>th, table.admintable>tbody>tr>th, .table.admintable>tbody>tr>th, table.admintable>tfoot>tr>th, .table>tfoot>tr>th, table>thead>tr>td, .table>thead>tr>td, table>tbody>tr>td, .table>tbody>tr>td, table>tfoot>tr>td, .table>tfoot>tr>td
{
  border: 1px lightgrey solid;
  border-collapse: separate;
  padding: 3px;
}

